--- a/src/app.css
+++ b/src/app.css
@@ -21,13 +21,11 @@
 
 @media (prefers-reduced-motion: no-preference) {
 	:root::view-transition-old(root) {
-		animation:
-			90ms cubic-bezier(0.4, 0, 1, 1) both fade-out
+		animation: 90ms cubic-bezier(0.4, 0, 1, 1) both fade-out;
 	}
 
 	:root::view-transition-new(root) {
-		animation:
-			210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in
+		animation: 210ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in;
 	}
 
 	::view-transition-old(navbar),
@@ -206,4 +204,3 @@
 .navigation-progress {
 	animation: navigation-progress 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
-
