--- a/src/app.css
+++ b/src/app.css
@@ -1,8 +1,8 @@
 @import 'tailwindcss';
-
 @import 'tw-animate-css';
-
 @import './lib/assets/css/font.css';
+
+@plugin '@tailwindcss/typography';
 
 @custom-variant dark (&:is(.dark *));
 
